Company List - GetAll

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,38 @@
-ToDo Menu Bar
-<br />
-<a [routerLink]="['/company']" routerLinkActive="router-link-active" >Company List</a>
-<br />
-<a [routerLink]="['/company', '1']" routerLinkActive="router-link-active" >Company Edit</a>
-<router-outlet></router-outlet>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="">PI Company</a>
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+          <a class="nav-link" [routerLink]="['/home']"
+            >Home <span class="sr-only">(current)</span></a
+          >
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/implantation']">Implantations</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" [routerLink]="['/company']">Companies</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" [routerLink]="['/user']">User</a>
+          </li>
+      </ul>
+    </div>
+  </nav>
+  
+  <main class="px-3 py-3 mx-auto">
+    <router-outlet></router-outlet>
+  </main>
+  
