Modal Component and Company Delete

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,7 @@
           <a class="nav-link" [routerLink]="['/implantation']">Implantations</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" [routerLink]="['/company']">Companies</a>
+          <a class="nav-link" [routerLink]="['/companies']">Companies</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" [routerLink]="['/user']">User</a>
