--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -20,7 +20,7 @@
             <button
               type="button"
               class="btn btn-sm btn-primary mx-1 my-1"
-              [routerLink]="['/products/edit', company.id]"
+              [routerLink]="['/companies/edit', company.id]"
             >
               Edit
             </button>
@@ -29,7 +29,7 @@
               class="btn btn-sm btn-danger mx-1 my-1"
               data-toggle="modal"
               data-target="#deleteModal"
-              (click)="setSelectedProduct(product)"
+              (click)="deleteCompany(company)"
             >
               Delete
             </button>
@@ -40,52 +40,8 @@
     <button
       type="button"
       class="btn btn-success mx-auto"
-      routerLink="/products/new"
+      routerLink="/comany/new"
     >
       Adicionar
     </button>
-    <!-- Start modal -->
-    <div
-      class="modal fade"
-      id="deleteModal"
-      tabindex="-1"
-      role="dialog"
-      aria-labelledby="deleteModelLabel"
-      aria-hidden="true"
-    >
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h5 class="modal-title" id="deleteModelLabel">
-              Delete product
-            </h5>
-            <button
-              type="button"
-              class="close"
-              data-dismiss="modal"
-              aria-label="Close"
-            >
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="modal-body text-danger">
-            <p>Are you sure, you want to delete?</p>
-          </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-dismiss="modal">
-              Close
-            </button>
-            <button
-              type="button"
-              class="btn btn-primary"
-              (click)="deleteProduct()"
-              data-dismiss="modal"
-            >
-              Delete
-            </button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- End modal -->
   </div>
