--- a/src/app/company/company-list/company-list.component.html
+++ b/src/app/company/company-list/company-list.component.html
@@ -40,7 +40,7 @@
   <button
     type="button"
     class="btn btn-success mx-auto"
-    routerLink="/comany/new"
+    routerLink="/companies/new"
   >
     Adicionar
   </button>
