--- a/src/app/company/company-edit/company-edit.component.html
+++ b/src/app/company/company-edit/company-edit.component.html
@@ -1,33 +1,22 @@
 <div style="max-width: 40rem;" class="mx-auto">
-  <h1 class="text-center mb-3">{{ formTitle }}</h1>
+  <h1 class="text-center mb-3">Edit Company {{id}}</h1>
   <form [formGroup]="companyForm" (ngSubmit)="submitForm()">
     <div class="form-group row">
       <div class="col">
         <label for="inputName">Name</label>
-        <input type="text" class="form-control" id="inputName" placeholder="Enter Name" formControlName="name"
-          maxlength="50" />
-        <div *ngIf="submitted && companyForm.controls.name.hasError('required')" class="alert alert-danger">
-          Required
-        </div>
+        <input type="text" class="form-control" [ngClass]="companyForm.controls.name.valid? 'is-valid':'is-invalid'"
+          id="inputName" placeholder="Enter Name" formControlName="name" maxlength="50" />
       </div>
       <div class="col">
         <label for="inputDocument">Document</label>
-        <input type="text" class="form-control" id="inputDocument" placeholder="CPF or CNPJ" formControlName="document"
-          maxlength="15" />
-        <div *ngIf="
-            submitted && companyForm.controls.document.hasError('required')
-          " class="alert alert-danger">
-          Required
-        </div>
+        <input type="text" class="form-control" [ngClass]="companyForm.controls.document.valid? 'is-valid':'is-invalid'"
+          id="inputDocument" placeholder="CPF or CNPJ" formControlName="document" maxlength="15" />
       </div>
     </div>
     <div class="form-group">
       <label for="inputEmail">Email</label>
-      <input type="email" class="form-control" id="inputEmail" placeholder="example@email.com"
-        formControlName="email" />
-      <div *ngIf="submitted && companyForm.controls.email.hasError('email')" class="alert alert-danger">
-        Email format invalid
-      </div>
+      <input type="email" class="form-control" [ngClass]="{'is-invalid':companyForm.controls.email.invalid}"
+        id="inputEmail" placeholder="example@email.com" formControlName="email" />
     </div>
     <div formGroupName="address">
       <div class="form-group row">
@@ -55,6 +44,19 @@
         <input type="text" class="form-control" id="inputStreet" formControlName="street" />
       </div>
     </div>
+    <div formArrayName="phones" *ngFor="let item of getPhones().controls; let i = index;">
+      <div [formGroupName]="i" class="form-group row">
+        <div class="col">
+          <label for="inputPhoneNumber">Phone</label>
+          <input type="text" class="form-control" id="inputPhoneNumber" formControlName="phone"
+            placeholder="Phone Number">
+        </div>
+        <div class="col"><label for="inputUsername">Username</label>
+          <input type="text" class="form-control" id="inputUsername" formControlName="username" placeholder="Username">
+        </div>
+      </div>
+    </div>
+    <button type="button" class="btn btn-success mx-1" (click)="addPhone()">Add Phone</button>
     <button type="submit" class="btn btn-primary mx-1">Submit</button>
     <button type="reset" class="btn btn-secondary mx-1" (click)="onReset()">Reset</button>
     <button type="button" class="btn btn-danger mx-1" (click)="onReset(); onCancel()">Cancel</button>
